--- a/RGB Sliders/Base.lproj/Main.storyboard
+++ b/RGB Sliders/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,39 +18,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NsA-RY-5CP">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NsA-RY-5CP">
                                 <rect key="frame" x="18" y="231" width="284" height="31"/>
                                 <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="updateBackgroundColor" destination="BYZ-38-t0r" eventType="valueChanged" id="wtx-Ke-1MH"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="oye-S9-j21">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="oye-S9-j21">
                                 <rect key="frame" x="18" y="269" width="284" height="31"/>
                                 <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="updateBackgroundColor" destination="BYZ-38-t0r" eventType="valueChanged" id="bLi-Qe-UKh"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="2t0-lv-wRb">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="2t0-lv-wRb">
                                 <rect key="frame" x="18" y="307" width="284" height="31"/>
                                 <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="updateBackgroundColor" destination="BYZ-38-t0r" eventType="valueChanged" id="D6U-We-hpq"/>
                                 </connections>
                             </slider>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ul4-8w-1AC">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ul4-8w-1AC">
                                 <rect key="frame" x="140" y="183" width="40" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IB0-08-Cky">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IB0-08-Cky">
                                 <rect key="frame" x="137" y="345" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="Uha-vs-DSg"/>
+                                </constraints>
                                 <state key="normal" title="Open"/>
                                 <connections>
                                     <segue destination="J79-mD-J8D" kind="show" identifier="openColor" id="xEl-yu-w0j"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N9q-DT-0sx">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N9q-DT-0sx">
                                 <rect key="frame" x="137" y="383" width="46" height="30"/>
                                 <state key="normal" title="Reset"/>
                                 <connections>
@@ -58,6 +62,26 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oye-S9-j21" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0JV-Ol-W9Z"/>
+                            <constraint firstItem="IB0-08-Cky" firstAttribute="leading" secondItem="N9q-DT-0sx" secondAttribute="leading" id="BQG-Jc-vlA"/>
+                            <constraint firstItem="oye-S9-j21" firstAttribute="top" secondItem="NsA-RY-5CP" secondAttribute="bottom" constant="8" symbolic="YES" id="CTi-eX-gic"/>
+                            <constraint firstItem="oye-S9-j21" firstAttribute="leading" secondItem="2t0-lv-wRb" secondAttribute="leading" id="ItD-ep-l4F"/>
+                            <constraint firstItem="NsA-RY-5CP" firstAttribute="leading" secondItem="oye-S9-j21" secondAttribute="leading" id="WYn-hf-fNI"/>
+                            <constraint firstItem="2t0-lv-wRb" firstAttribute="top" secondItem="oye-S9-j21" secondAttribute="bottom" constant="8" symbolic="YES" id="d2X-VI-TUr"/>
+                            <constraint firstItem="2t0-lv-wRb" firstAttribute="centerX" secondItem="IB0-08-Cky" secondAttribute="centerX" id="ePt-AY-giW"/>
+                            <constraint firstItem="IB0-08-Cky" firstAttribute="top" secondItem="2t0-lv-wRb" secondAttribute="bottom" constant="8" symbolic="YES" id="grN-tV-R6s"/>
+                            <constraint firstItem="Ul4-8w-1AC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="140" id="j5q-fY-xEx"/>
+                            <constraint firstItem="IB0-08-Cky" firstAttribute="trailing" secondItem="N9q-DT-0sx" secondAttribute="trailing" id="kAh-DU-6GL"/>
+                            <constraint firstItem="Ul4-8w-1AC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="l64-Mn-Dao"/>
+                            <constraint firstItem="oye-S9-j21" firstAttribute="trailing" secondItem="2t0-lv-wRb" secondAttribute="trailing" id="m17-8D-aPI"/>
+                            <constraint firstItem="Ul4-8w-1AC" firstAttribute="centerX" secondItem="NsA-RY-5CP" secondAttribute="centerX" id="m8g-rT-vBz"/>
+                            <constraint firstItem="NsA-RY-5CP" firstAttribute="trailing" secondItem="oye-S9-j21" secondAttribute="trailing" id="nTp-xG-o6J"/>
+                            <constraint firstItem="NsA-RY-5CP" firstAttribute="top" secondItem="Ul4-8w-1AC" secondAttribute="bottom" constant="8" symbolic="YES" id="p79-io-Nc0"/>
+                            <constraint firstItem="Ul4-8w-1AC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="119" id="pBO-f3-gRH"/>
+                            <constraint firstItem="N9q-DT-0sx" firstAttribute="top" secondItem="IB0-08-Cky" secondAttribute="bottom" constant="8" symbolic="YES" id="syP-K8-RBe"/>
+                            <constraint firstItem="NsA-RY-5CP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="tb8-QW-AD9"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hmr-LP-ZMe"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
